--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Caesar Cipher</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="cipher.js"></script>
-    <script src="index.js"></script>
-  </body>
+<head>
+<meta charset="UTF-8">
+<title>Documento sin título</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <form class= "agrupa">
+<h2>Mensaje para descifrar</h2>
+<textarea id="code" class="input">Mensaje a descifrar</textarea>
+<textarea id="n" class="input">Nro de caracteres </textarea>
+<h2>Resultado</h2>
+<div class="output"><textarea>Mensaje a descifrar</textarea></div>
+<div class="controls">
+  <input id="reset" type="button" value="Resetear" />
+  <input id="solution" type="button" value="Mostrar solución" />
+</div>
+</div>
+</form>
+<script type="text/javascript" src="js.js" ></script>
+
+</body>
 </html>
